infrastructure/helm-charts/nest-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nest-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  # ingressClassName: nginx-example
  defaultBackend:
    service:
      name: nest
      port:
        number: 80
  # rules:
  # - http:
  #     paths:
  #     - path: /angular
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: angular
  #           port:
  #             number: 80
